--- a/css/style.css
+++ b/css/style.css
@@ -242,12 +242,19 @@ main {
   background: #101826;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
 .foto-item img {
+  width: 100%;
+  height: 200px;       /* altura do card */
+  object-fit: contain; /* mantém a imagem inteira dentro do card */
+  background-color: #101826; /* opcional: fundo caso sobre espaço */
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+/*.foto-item img {
   width: 100%;
   height: auto;
   transition: transform 0.3s ease, filter 0.3s ease;
-}
+}*/
 
 .foto-item h3 {
   margin: 10px 0;
